fix nav z-index

--- a/css/style.css
+++ b/css/style.css
@@ -521,6 +521,7 @@ h6 {
 
 .nav {
   position: fixed;
+  z-index: 1000;
   width: 100%;
   top: 0;
   height: 0.5rem;
@@ -594,7 +595,7 @@ h6 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  z-index: 1000;
+  z-index: 500;
   filter: opacity(95%);
   height: 50vh;
 }
