--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -22,6 +22,7 @@
 
 .nav {
     position: fixed;
+    z-index: 1000;
     width: 100%;
     top: 0;
     height: .5rem;
