--- a/scss/components/_image.scss
+++ b/scss/components/_image.scss
@@ -39,7 +39,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: 1000;
+    z-index: 500;
     filter: opacity(95%);
     height: 50vh;
     &-overlay {
